# Open-Source-GPU-Accelerated-Othello-Engine

./: CMakeLists.txt  main.cpp
src/: leaderboard.cpp  leaderboard.h  main.cpp  tcpClientSide.cpp  tcpServerSide.cpp
